--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Cutive&display=swap");
 :root {
   --glow-color1: #a87fb6;
   --glow-color2: #ffffff;
@@ -45,6 +46,76 @@ ul {
   padding-bottom: 15px;
 }
 
+.homeScreen {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  z-index: 99999999;
+  background: black;
+  user-select: none;
+}
+
+.gameTitle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.homeScreen h1 {
+  color: white;
+  text-align: center;
+  font-size: 5rem;
+  font-family: "Afacad Flux", sans-serif;
+  padding: 0 0 40px 0;
+}
+
+.mainPlayButton {
+  appearance: none;
+  background-color: #000000;
+  border: 2px solid wheat;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
+}
+
+.mainPlayButton:disabled {
+  pointer-events: none;
+}
+
+.mainPlayButton:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.mainPlayButton:active {
+  box-shadow: wheat;
+  transform: translateY(0);
+}
+
 .clickToEnterSplash {
   position: fixed;
   width: 100%;
@@ -74,8 +145,9 @@ ul {
 
 .clickToEnterSplash h3 {
   color: white;
-  font-size: 1rem;
+  font-size: 1.5rem;
   text-align: center;
+  letter-spacing: 2px;
   padding-bottom: 20px;
-  font-family: "Afacad Flux", sans-serif;
+  font-family: "Cutive", sans-serif;
 }
