--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,111 +1,17 @@
-@import url("https://fonts.cdnfonts.com/css/weblysleek-ui");
-@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=VT323&disply=Swap");
-:root {
-  --glow-color1: #a87fb6;
-  --glow-color2: #ffffff;
-  --glow-color3: #f9e076;
-}
+/* Error: expected "}".
+ *     ,
+ * 109 |   text-shadow: 2px 2px 3px rgb(174, 222, 102), 0 0 1em rgb(174, 222, 102), 0 0 0.2em rgb(174, 222, 102); 
+ *     |                                                                                                          ^
+ *     '
+ *   scss\styles.scss 109:106  root stylesheet */
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-}
-
-html,
-body {
-  scroll-behavior: smooth;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-body::-webkit-scrollbar {
-  display: none;
-}
-
-p {
-  font-family: "Montserrat", sans-serif;
-  padding-left: 50px;
-  padding-right: 70px;
-  padding-bottom: 10px;
-  font-size: 17px;
-  line-height: 30px;
-  font-weight: 500;
-}
-
-ul {
-  font-family: "Montserrat", sans-serif;
-  margin-left: 40px;
-  padding-bottom: 15px;
-}
-
-.clickToEnterSplash {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 50%;
-  left: 50%;
-  text-align: center;
-  transform: translate(-50%, -50%);
-  z-index: 99999999;
-  background: black;
-  user-select: none;
-}
-
-.initialTextDiv {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.clickToEnterSplash h1 {
-  color: white;
-  font-size: 2rem;
-  text-align: center;
-  font-family: "Afacad Flux", sans-serif;
-}
-
-.clickToEnterSplash h3 {
-  color: white;
-  font-size: 1rem;
-  text-align: center;
-  padding-bottom: 20px;
-  font-family: "Afacad Flux", sans-serif;
-}
-
-#screen {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: green;
-}
-
-#scan,
-#bezel {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-}
-
-#scan {
-  opacity: 80%;
-}
-
-#content {
-  font-family: VT323;
-  padding: 5%;
-  color: rgb(166, 248, 44);
-  font-size: 32px;
-  text-shadow: 1px 1px 2px rgb(150, 167, 124), 0 0 1em rgb(150, 167, 124), 0 0 0.2em rgb(150, 167, 124);
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "}".\a     \2577 \a 109 \2502    text-shadow: 2px 2px 3px rgb(174, 222, 102), 0 0 1em rgb(174, 222, 102), 0 0 0.2em rgb(174, 222, 102); \d\a     \2502                                                                                                           ^\a     \2575 \a   scss\\styles.scss 109:106  root stylesheet';
 }
