--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=VT323&disply=Swap");
 @import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Cutive&display=swap");
 :root {
   --glow-color1: #a87fb6;
@@ -149,6 +148,7 @@ ul {
   font-size: 1.5rem;
   text-align: center;
   letter-spacing: 2px;
+  line-height: 50px;
   padding-bottom: 20px;
   font-family: "Cutive", sans-serif;
 }
@@ -157,7 +157,7 @@ ul {
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: green;
+  background-color: #008080;
 }
 
 #scan,
@@ -168,16 +168,48 @@ ul {
   top: 0;
   left: 0;
   pointer-events: none;
+  z-index: 999999;
 }
 
 #scan {
-  opacity: 80%;
+  opacity: 66%;
 }
 
 #content {
   font-family: VT323;
-  padding: 5%;
-  color: rgb(166, 248, 44);
   font-size: 32px;
-  text-shadow: 1px 1px 2px rgb(150, 167, 124), 0 0 1em rgb(150, 167, 124), 0 0 0.2em rgb(150, 167, 124);
+}
+
+#loginPage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 25%;
+}
+
+#windows-98-logo {
+  width: 48px;
+  height: 40px;
+}
+
+#windows-98-logo-text {
+  margin-left: 15px;
+  width: 125px;
+  height: 40px;
+}
+
+.field-end {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.field-end button:first-child {
+  margin-right: 7.5px;
+}
+
+.field-start {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 15px;
 }
