--- a/views/ezaccCode/header.ejs
+++ b/views/ezaccCode/header.ejs
@@ -17,4 +17,5 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <link rel="stylesheet" href="https://unpkg.com/98.css@0.1.4/build/98.css" />
 </head>
