--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Cutive&display=swap");
+@font-face {
+  font-family: "windows-regular";
+  src: url("/font-resources/windows-regular.ttf");
+}
 :root {
   --glow-color1: #a87fb6;
   --glow-color2: #ffffff;
@@ -31,10 +35,7 @@ body::-webkit-scrollbar {
 }
 
 p {
-  font-family: "Montserrat", sans-serif;
-  padding-left: 50px;
-  padding-right: 70px;
-  padding-bottom: 10px;
+  font-family: "windows-regular", sans-serif;
   font-size: 17px;
   line-height: 30px;
   font-weight: 500;
@@ -178,6 +179,8 @@ ul {
 #content {
   font-family: VT323;
   font-size: 32px;
+  width: 100%;
+  height: 100%;
 }
 
 #loginPage {
@@ -200,6 +203,7 @@ ul {
 }
 
 .field-end {
+  margin-top: 15px;
   display: flex;
   justify-content: flex-end;
 }
@@ -212,4 +216,12 @@ ul {
   display: flex;
   justify-content: flex-start;
   margin-bottom: 15px;
+}
+
+#offer-popup {
+  position: absolute;
+  top: 30%;
+  left: 65%;
+  transform: translate(-50%, -50%);
+  width: 25%;
 }
