--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -225,3 +225,11 @@ ul {
   transform: translate(-50%, -50%);
   width: 25%;
 }
+
+#loading-questions {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 15%;
+}
